# research-portfolio

./: .gitignore  .nojekyll  DEPLOYMENT.md  DEPLOY_CHECKLIST.md  LICENSE  README.md  deploy.sh  index.html  package.json  serve.js  serve.py
.github/workflows/: deploy.yml
css/: responsive.css  style.css
images/: site.webmanifest
js/: main.js
projects/: projects.json
projects/Camera驱动开发/: README.md
projects/Camera驱动开发/第一阶段_FFmpeg应用层/: README.md
projects/Camera驱动开发/第七阶段_综合项目实战/: README.md
projects/Camera驱动开发/第三阶段_FFmpeg与V4L2集成/: README.md
projects/Camera驱动开发/第二阶段_FFmpeg开发层/: README.md
projects/Camera驱动开发/第五阶段_V4L2内核框架/: README.md
projects/Camera驱动开发/第六阶段_Camera驱动开发/: README.md
projects/Camera驱动开发/第四阶段_V4L2用户空间编程/: README.md
projects/云原生/: README.md
projects/云原生/docker/: Dockerfile  requirements.txt
projects/云原生/helm-charts/ffmpeg-service/: Chart.yaml  values.yaml
projects/云原生/helm-charts/ffmpeg-service/templates/: _helpers.tpl  deployment.yaml  hpa.yaml
projects/云原生/src/: main.py
projects/广播电视/: README.md
projects/广播电视/loudness/: README.md
projects/广播电视/scte/: README.md
projects/广播电视/ts/: README.md
projects/流媒体传输/: README.md
projects/流媒体传输/HLS优化/: hls_low_latency.py
projects/流媒体传输/RTMP优化/: rtmp_optimizer.py
projects/移动端开发/: README.md
projects/移动端开发/Android实现/: ffmpeg_android.py
projects/视频分析/: README.md
projects/视频分析/目标检测/: real_time_detector.py
projects/视频编解码/: CMakeLists.txt  README.md  build.sh
projects/视频编解码/common/: CMakeLists.txt
projects/视频编解码/common/include/: common.h
projects/视频编解码/第七章_FFmpeg封装和解封装/: README.md
projects/视频编解码/第七章_FFmpeg封装解封装/: CMakeLists.txt
projects/视频编解码/第七章_FFmpeg封装解封装/examples/: test_media_info.cpp  test_remux.cpp  test_video_clip.cpp  test_xdemux.cpp  test_xmux.cpp
projects/视频编解码/第七章_FFmpeg封装解封装/include/: xdemux.h
projects/视频编解码/第七章_FFmpeg封装解封装/src/: xdemux.cpp  xdemux_factory.cpp
projects/视频编解码/第三章_FFmpeg_AVFrame渲染/: CMakeLists.txt  README.md
projects/视频编解码/第三章_FFmpeg_AVFrame渲染/examples/: test_avframe_manager.cpp  test_fps_controller.cpp  test_threaded_renderer.cpp  test_yuv_converter.cpp
projects/视频编解码/第三章_FFmpeg_AVFrame渲染/include/: avframe_manager.h  threaded_renderer.h
projects/视频编解码/第三章_FFmpeg_AVFrame渲染/src/: avframe_manager.cpp  threaded_renderer.cpp
projects/视频编解码/第二章_图像格式基于QT_SDL渲染/: CMakeLists.txt  README.md
projects/视频编解码/第二章_图像格式基于QT_SDL渲染/examples/: test_renderer.cpp  test_rgb_render.cpp  test_yuv_render.cpp
projects/视频编解码/第二章_图像格式基于QT_SDL渲染/include/: xvideo_view.h
projects/视频编解码/第二章_图像格式基于QT_SDL渲染/src/: qt_video_view.cpp  xvideo_view_factory.cpp
projects/视频编解码/第五章_FFmpeg视频编码/: CMakeLists.txt  README.md
projects/视频编解码/第五章_FFmpeg视频编码/examples/: test_encode_performance.cpp  test_h264_encoder.cpp  test_h265_encoder.cpp  test_hardware_encode.cpp  test_xencode.cpp
projects/视频编解码/第五章_FFmpeg视频编码/include/: xencode.h
projects/视频编解码/第五章_FFmpeg视频编码/src/: xencode.cpp  xencode_factory.cpp
projects/视频编解码/第八章_RTSP录制/: CMakeLists.txt
projects/视频编解码/第八章_RTSP录制/examples/: test_rtsp_client.cpp  test_rtsp_multi_recorder.cpp  test_rtsp_performance.cpp  test_rtsp_recorder.cpp  test_rtsp_utils.cpp
projects/视频编解码/第八章_RTSP录制/include/: xrtsp.h
projects/视频编解码/第八章_RTSP录制/src/: xrtsp.cpp
projects/视频编解码/第八章_解封装rtsp并录制视频/: README.md
projects/视频编解码/第六章_FFmpeg视频软硬解码/: README.md
projects/视频编解码/第六章_FFmpeg软硬解码/: CMakeLists.txt
projects/视频编解码/第六章_FFmpeg软硬解码/examples/: test_encode_decode_loop.cpp  test_h264_decoder.cpp  test_h265_decoder.cpp  test_hardware_decode.cpp  test_xdecode.cpp
projects/视频编解码/第六章_FFmpeg软硬解码/include/: xdecode.h
projects/视频编解码/第六章_FFmpeg软硬解码/src/: xdecode.cpp  xdecode_factory.cpp
projects/视频编解码/第四章_FFmpeg像素格式转换和多路YUV_RGB渲染/: CMakeLists.txt  README.md
projects/视频编解码/第四章_FFmpeg像素格式转换和多路YUV_RGB渲染/examples/: test_batch_converter.cpp  test_format_converter.cpp  test_multi_player.cpp  test_sws_converter.cpp
projects/视频编解码/第四章_FFmpeg像素格式转换和多路YUV_RGB渲染/include/: multi_player.h  sws_converter.h
projects/视频编解码/第四章_FFmpeg像素格式转换和多路YUV_RGB渲染/src/: multi_player.cpp  sws_converter.cpp
projects/视频编解码/算法优化/: codec_optimizer.py
projects/质量评估/: README.md
projects/质量评估/scripts/: quality_assessment.py
projects/音频处理/: README.md
projects/音频处理/回声消除/: echo_cancellation.py
projects/音频处理/实时处理/: audio_processor.py
projects/音频处理/降噪算法/: advanced_noise_reduction.py
projects/音频处理/音频增强/: audio_enhancement.py
